--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,14 @@ services:
     networks:
       - bridge
 
-  db:
+  hrm_db:
     container_name: db
     image: mysql:8.0
     restart: always
     environment:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: Coderz12!@
-      MYSQL_DATABASE: hrm-db
+      MYSQL_DATABASE: hrm_db
       MYSQL_USER: hrm-user
       MYSQL_PASSWORD: Coderz12!@
     command: --sql-mode="STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"
