--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     container_name: hrm-php-apache
+    restart: always
     ports:
       - 2007:80
     networks:
@@ -13,7 +14,7 @@ services:
 
   hrm_db:
     container_name: db
-    image: mysql:8.0
+    image: mysql:latest
     restart: always
     environment:
       MYSQL_ROOT_USER: root
@@ -26,6 +27,8 @@ services:
       - "1103:3306"
     networks:
       - bridge
+    volumes:
+      - db_data:/var/lib/mysql
 networks:
   bridge:
     driver: bridge
